--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,28 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.modal{
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+}
+
+
+.left, .right{
+  padding: 3px;
+}
+
+.right{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.up{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+  font-weight: bold;
+}
